style.css
/* ... */
.event-duration {
	position: absolute;
	right: 0;
	bottom: 0;
	border-top-left-radius: 5px;
	padding-left: calc(var(--margin-unit) / 2);
	background-color: var(--translucent-background-color);
	backdrop-filter: blur(5px);
	-webkit-backdrop-filter: blur(5px);
	color: var(--color);
}

.duration {
	position: absolute;
	right: 0;
	bottom: 0;
}

.event-members {
	padding-left: var(--margin-unit);
	padding-right: var(--margin-unit);
	height: 60px;
	overflow-x: scroll;
	white-space: nowrap;
}

.event-members .avatar {
	display: block;
	width: 60px;
	height: 60px;
}

.event-member {
	display: inline-block;
	margin-left: var(--margin-unit);
}

.event-member:first-child {
	margin-left: 0;
}

.popup-container {
	position: absolute;
	top: var(--margin-unit);
	right: var(--margin-unit);
}

.popup-toggle {
	cursor: pointer;
}

.popup {
	position: absolute;
	z-index: 3; /* Put it above everything else except the modal dialog. */
	right: 0;
	padding: initial;
	width: max-content;
	background-color: var(--background-color);
	border: solid var(--border-width) var(--border-color);
}

.popup-toggle[aria-expanded="false"] ~ .popup {
	display: none;
}

.popup button {
	cursor: pointer;
	padding-top: var(--margin-unit);
	padding-bottom: var(--margin-unit);
	width: 100%;
	text-align: initial;
}

.empty-result {
	text-align: center;
}

.load-more-feed {
	display: flex;
	flex-direction: column;
	justify-content: center;
	height: var(--hamburger-length);
	text-align: center;
}

.load-more-feed-button {
	width: 100%;
	height: 100%;
	font-size: initial;
}

.social-icon {
	vertical-align: middle;
	width: 2em;
	height: 2em;
	fill: currentColor;
}

.error-log {
	position: sticky;
	bottom: 0;
	z-index: 1; /* Put it above `.date-heading`. */
	margin: initial;
	padding: initial;
	max-height: calc(100vh - 260px);
	min-height: 2em;
	overflow: scroll;
	background-color: red;
	color: white;
	font-family:
		'Helvetica Neue',
		'ヒラギノ角ゴ Pro W4',
		'Hiragino Kaku Gothic Pro',
		'メイリオ',
		'Meiryo',
		sans-serif;
}

.error-log > li {
	margin: var(--margin-unit);
}

.error-log a {
	color: #0FF;
}

.dismiss-error {
	float: right;
	border-radius: 5px;
	color: #000;
	background-color: #FFF;
}

.modal-backdrop {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 4; /* Put it above everything else. */
	margin: 0;
	border: none;
	width: 100vw;
	max-width: initial;
	height: 100vh;
	max-height: initial;
	padding: 0;
	background-color: var(--background-color);
	overscroll-behavior-x: none;
	overscroll-behavior-y: contain;
}

.modal-backdrop:not([open]) {
	display: none;
}

.modal-backdrop[open] ~ .primary-window {
	filter: blur(5px);
}

.modal {
	display: flex;
	flex-direction: column;
	align-self: center;
	background-color: var(--background-color);
	color: var(--color);
}

.about li {
	display: list-item;
}

.dialog-title-bar {
	display: flex;
	border-bottom: solid var(--border-width) var(--border-color);
	padding: calc(2 * var(--margin-unit));
	padding-top: 0;
	padding-bottom: 0;
	height: var(--hamburger-length);
	flex-shrink: 0;
}

.dialog-title-bar-button{
	width: 2em;
	height: 2em;
	align-self: center;
	cursor: pointer;
	stroke: currentColor;
}

.modal-back-button:disabled {
	visibility: hidden;
}

.dialog-title {
	flex-grow: 1;
	align-self: center;
	text-align: center;
}

.dialog-content {
	padding: calc(2 * var(--margin-unit));
	padding-top: 0;
	overflow-y: scroll;
}

.copyright-loading {
	margin: auto;
}

.copying-error {
	color: red;
}

.copying blockquote p {
	white-space: pre-wrap;
}

.kbd-help-dl {
	display: grid;
}

.kbd-help-dl > dt {
	grid-column: 1;
}

.kbd-help-dl > dd {
	grid-column: 2;
}

/* Always show icons in the drawer. */
@media (min-width: 480px) {
	:root {
		--drawer-width: 240px;
		--event-width: calc(100vw - 2 * var(--border-width) - var(--hamburger-length));
	}

	.hamburger-label.filter-active {
		background-color: var(--background-color);
	}

	.drawer {
		/* Use `initial` rather than `0` to prevent `transition` animation to trigger when shrinking
		 * the viewport width. */
		/* XXX: The animation of `.drawer-right` still triggers. */
		left: initial;
		/* Visually hide labels and the search input inside it by default. */
		width: calc(var(--hamburger-length) + var(--border-width));
		overflow-x: hidden;
		transition: width .3s;
	}

	.hamburger-checkbox:checked ~ .drawer,
	/* We want the drawer to open when the search input is focused, but using `:focus-within` here
	 * would cause the drawer to open when a feed filter button is clicked too.
	 * So we are using `.search-focused` class, which is set by Elm when the input is focused. */
	.search-focused ~ .drawer {
		/* Show the labels and input. */
		width: var(--drawer-width);
	}

	.drawer-right {
		margin-left: calc(var(--hamburger-length) + var(--border-width));
		border-left: solid var(--border-width) var(--border-color);
		transition: margin-left .3s;
	}

	.hamburger-checkbox:checked ~ .drawer-right, .search-focused ~ .drawer-right {
		margin-left: var(--drawer-width);
	}

	@media (prefers-reduced-motion) {
		/* TODO: Find a better animation. */
		.drawer {
			transition: none;
			/* Revert rules in the previous `@media (prefers-reduced-motion)`. */
			z-index: 2;
			opacity: 1;
		}

		.drawer-right {
			transition: none;
		}
	}
}

/* Make the modal dialog smaller. */
@media (min-width: 600px) {
	.modal-backdrop {
		display: flex;
		align-items: center;
		justify-content: center;
		background: none;
	}

	.modal {
		width: fit-content;
		min-width: 480px;
		max-width: calc(100vw - 12 * var(--margin-unit));
		height: fit-content;
		max-height: calc(100vh - 12 * var(--margin-unit));
		border: solid var(--border-width) var(--border-color);
		border-radius: 10px;
	}
}
/* ... */

